--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-code-editor",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simple no-frills code editor with syntax highlighting",
   "keywords": [
     "code",
@@ -29,19 +29,19 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "dedent": "0.7.0",
+    "dedent": "^0.7.0",
     "eslint": "^4.19.1",
     "eslint-config-satya164": "^1.0.2",
-    "flow-bin": "^0.74.0",
+    "flow-bin": "^0.75.0",
     "husky": "^0.14.3",
     "prettier": "^1.13.5",
     "prismjs": "^1.15.0",
     "quik": "^1.0.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "peerDependencies": {
-    "react": "16.3.2",
-    "react-dom": "16.3.2"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
