--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "flow": "flow",
     "build": "babel src --out-dir lib --ignore '**/__tests__/**'",
     "prepare": "yarn build",
-    "example": "quik --run example/App.js",
+    "example": "parcel example/index.html",
+    "gh-pages": "git branch -D gh-pages; git checkout -b gh-pages && rm -rf dist/ && parcel build example/App.js && git add -f dist/ && git commit -m 'Publish website' && git push -fu origin gh-pages; git checkout master",
     "precommit": "yarn lint && yarn flow"
   },
   "main": "lib/index.js",
@@ -26,17 +27,18 @@
   "author": "Satyajit Sahoo <satyajit.happy@gmail.com> (https://github.com/satya164/)",
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "dedent": "^0.7.0",
     "eslint": "^4.19.1",
     "eslint-config-satya164": "^1.0.2",
     "flow-bin": "^0.75.0",
     "husky": "^0.14.3",
+    "parcel-bundler": "^1.9.2",
     "prettier": "^1.13.5",
     "prismjs": "^1.15.0",
-    "quik": "^1.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
