--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "prepare": "yarn build",
     "example": "parcel example/index.html",
     "gh-pages": "git branch -D gh-pages; git checkout -b gh-pages && rm -rf dist/ && parcel build example/App.js && git add -f dist/ && git commit -m 'Publish website' && git push -fu origin gh-pages; git checkout master",
-    "precommit": "yarn lint && yarn flow"
+    "precommit": "yarn lint && yarn flow",
+    "release": "release-it"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "main": "lib/index.js",
   "files": [
@@ -33,6 +37,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "conventional-changelog-cli": "^2.0.5",
     "dedent": "^0.7.0",
     "del-cli": "^1.1.0",
     "eslint": "^4.19.1",
@@ -44,7 +49,8 @@
     "prettier": "^1.13.5",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "release-it": "^7.6.1"
   },
   "peerDependencies": {
     "react": "^16.0.0",
