--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "prepare": "yarn build",
     "example": "parcel example/index.html",
     "gh-pages": "git branch -D gh-pages; git checkout -b gh-pages && rm -rf dist/ && parcel build example/App.js && git add -f dist/ && git commit -m 'Publish website' && git push -fu origin gh-pages; git checkout master",
-    "precommit": "yarn lint && yarn flow",
     "release": "release-it"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn flow"
+    }
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
@@ -33,24 +37,25 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "conventional-changelog-cli": "^2.0.5",
+    "conventional-changelog-cli": "^2.0.11",
     "dedent": "^0.7.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.19.1",
-    "eslint-config-satya164": "^1.0.2",
-    "flow-bin": "^0.75.0",
-    "flow-copy-source": "^2.0.0",
-    "husky": "^0.14.3",
-    "parcel-bundler": "^1.9.2",
-    "prettier": "^1.13.5",
+    "eslint": "^5.8.0",
+    "eslint-config-satya164": "^2.0.1",
+    "flow-bin": "^0.85.0",
+    "flow-copy-source": "^2.0.2",
+    "husky": "^1.1.3",
+    "parcel-bundler": "^1.10.3",
+    "prettier": "^1.14.3",
     "prismjs": "^1.15.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "release-it": "^7.6.1"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "release-it": "^7.6.2"
   },
   "peerDependencies": {
     "react": "^16.0.0",
