chore: add a GitHub workflow for publishing

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prebuild": "del lib/",
     "prepare": "yarn build",
     "example": "parcel example/index.html",
-    "gh-pages": "git branch -D gh-pages; git checkout -b gh-pages && rm -rf dist/ && parcel build example/App.js && git add -f dist/ && git commit -m 'Publish website' && git push -fu origin gh-pages; git checkout master",
+    "gh-pages": "git branch -D gh-pages; git checkout -b gh-pages && rm -rf dist/ && parcel build example/App.js && git add -f dist/ && git commit -nm 'Publish website' && git push -fu origin gh-pages; git checkout @{-1}",
     "release": "release-it"
   },
   "husky": {
@@ -44,7 +44,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "conventional-changelog-cli": "^2.0.11",
+    "conventional-changelog-cli": "^2.0.12",
     "dedent": "^0.7.0",
     "del-cli": "^1.1.0",
     "eslint": "^5.8.0",
@@ -57,7 +57,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "release-it": "^7.6.2"
+    "release-it": "^10.3.1"
   },
   "peerDependencies": {
     "react": "^16.0.0",
